Fix z-index for header + navbar

--- a/projects/starbucks/style.css
+++ b/projects/starbucks/style.css
@@ -25,6 +25,7 @@ body {
     left: 0;
     width: 100%;
     height: 50px;
+    z-index: 999;
 }
 
 .navbar {
